[project]
name = "spryker-doc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index>=0.12.22",
    "llama-index-embeddings-huggingface>=0.5.2",
    "llama-index-llms-llama-cpp>=0.4.0",
    "llama-index-llms-ollama>=0.5.2",
    "llama-index-llms-openai-like>=0.3.3",
]
